--- a/app/src/main/res/layout/activity_fifty_dollar.xml
+++ b/app/src/main/res/layout/activity_fifty_dollar.xml
@@ -19,18 +19,20 @@
 
     <ImageView
         android:id="@+id/imageLeftTop"
-        android:layout_width="128dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="159dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="19dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginRight="15dp"
         android:layout_marginTop="8dp"
 
         app:srcCompat="@drawable/background" />
 
     <ImageView
         android:id="@+id/imageRightTop"
-        android:layout_width="128dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="159dp"
         app:srcCompat="@drawable/background"
         android:layout_marginTop="8dp"
@@ -41,43 +43,24 @@
 </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/scoreShow"
+    <ImageView
+        android:id="@+id/toStore"
+        android:onClick="toStore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="28sp"
+        app:srcCompat="@drawable/kitstore"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.142"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.115" />
-
-    <TextView
-        android:id="@+id/comboShow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="28sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.064"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.115" />
+        app:layout_constraintHorizontal_bias="0.962"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -92,25 +75,92 @@
 
         <ImageView
             android:id="@+id/imageLeftBottom"
-            android:layout_width="128dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="159dp"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="19dp"
-            android:layout_marginRight="24dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="8dp"
 
             app:srcCompat="@drawable/background" />
 
         <ImageView
             android:id="@+id/imageRightBottom"
-            android:layout_width="128dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="159dp"
             android:layout_marginBottom="16dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="8dp"
             app:srcCompat="@drawable/background" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/scoreShow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:text="TextView"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintLeft_toRightOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.089" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.043"
+        app:srcCompat="@drawable/score" />
+
+    <TextView
+        android:id="@+id/comboShow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.177"
+        android:layout_marginLeft="87dp"
+        android:layout_marginStart="87dp" />
+
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.117"
+        app:srcCompat="@drawable/combo"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
